--- a/config.gradle
+++ b/config.gradle
@@ -1,6 +1,6 @@
 ext {
     kotlin_version = '1.3.31'
-    gradle_version='3.4.1'
+    gradle_version = '3.4.1'
 
     /*defaultConfig*/
     compile_sdk_version = 28
@@ -25,7 +25,7 @@ ext {
     eventbus = "3.1.1"
     glide = "4.9.0"
     permission = "2.0.1"
-    retrofit = "2.5.0"
+    retrofit = "2.6.0"
     progressmanager_version = "1.5.0"
     ok_http = "3.12.1"
     rx_android = "2.1.1"
@@ -50,12 +50,11 @@ ext {
     datepickerVersion = "1.2.2"
     flexbox = "1.1.0"
     hotfix = "3.2.8"
-    dokka_version = "0.9.18"
-    gradle_versions_plugin="0.21.0"
-    zxing_version="2.2.8"
-    jsoup_version="1.12.1"
-    kotlinx_coroutines_android="1.2.1"
-    leakcanary_android="2.0-alpha-2"
+    gradle_versions_plugin = "0.21.0"
+    zxing_version = "2.2.8"
+    jsoup_version = "1.12.1"
+    kotlinx_coroutines_android = "1.2.1"
+    leakcanary_android = "2.0-alpha-2"
 
 
     signConfigs = [
