--- a/config.gradle
+++ b/config.gradle
@@ -3,7 +3,7 @@ ext {
     gradle_version = '3.4.2'
 
     /*defaultConfig*/
-    compile_sdk_version = 29 //Android 10(Q)
+    compile_sdk_version = 28 //Android 9(P)
     min_sdk_version = 21  //Android 5.0
     target_sdk_version = 28  //Android 9(P)
     version_code = 1  //eg:1->0.0.1  10->0.1.0  100->1.0.0
