1.在mvp的基础上尝试新增mvvm方式开发 2.新增BaseViewModel，主要负责加载状态数据的管理 3.新增MoviesVmActivity，该页面采用mvvm方式开发

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
 
+
         <activity
             android:name=".ui.ImageListActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" /> <!-- 阿里热修复相关配置 -->
@@ -77,6 +78,9 @@
             android:name=".ui.DropDownMenuActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait" />
+
+
+        <activity android:name=".ui.MoviesVmActivity" />
     </application>
 
 </manifest>
