1.高德定位模块更改为MVVM结构 2.删除无用的mvp相关代码

--- a/gao_de_map/src/main/module/AndroidManifest.xml
+++ b/gao_de_map/src/main/module/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <service android:name="com.amap.api.location.APSService" />
 
         <activity
-            android:name=".ui.GaoDeActivity"
+            android:name=".GaoDeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait" />
 
