--- a/gao_de_map/src/main/AndroidManifest.xml
+++ b/gao_de_map/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         <service android:name="com.amap.api.location.APSService" />
 
         <activity
-            android:name=".ui.GaoDeActivity"
+            android:name=".GaoDeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait">
 
