1.更新部分sdk版本 2.暂时删除dagger2相关依赖以及相关代码

--- a/config.gradle
+++ b/config.gradle
@@ -25,21 +25,20 @@ ext {
     eventbus = "3.1.1"
     glide = "4.9.0"
     permission = "2.0.1"
-    retrofit = "2.6.0"
+    retrofit = "2.6.1"
     progressmanager_version = "1.5.0"
     ok_http = "4.0.1"
     rx_android = "2.1.1"
 //    rx_java = "2.2.8"
     rx_kotlin = "2.4.0"
     autodispose_version = "1.2.0"
-    dagger2 = "2.24"
     bottom_navigation_bar = "2.1.0"
     gson = "2.8.5"
     material_dialogs = "3.1.0"
     baseRecyclerViewAdapterHelper = "2.9.49-androidx"
     photoview = "2.3.0"
     objectboxVersion = "2.3.4"
-    utilcode = "1.25.4"
+    utilcode = "1.25.5"
     arouter_api = "1.5.0"
     arouter_compiler = "1.2.2"
     walleVersion = "1.1.6"
@@ -54,7 +53,7 @@ ext {
     zxing_version = "2.2.8"
     jsoup_version = "1.12.1"
     kotlinx_coroutines_android = "1.2.1"
-    leakcanary_android = "2.0-alpha-3"
+    leakcanary_android = "2.0-beta-2"
 
 
     signConfigs = [
