--- a/common/build.gradle
+++ b/common/build.gradle
@@ -51,12 +51,10 @@ dependencies {
     api "androidx.constraintlayout:constraintlayout:$constraintlayout"
     api "androidx.annotation:annotation:$annotation"
     api "androidx.multidex:multidex:$multiDexVersion"
+
     api "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions"
-
-    /*dagger2*/
-    api "com.google.dagger:dagger:$dagger2"
-    kapt "com.google.dagger:dagger-compiler:$dagger2"
-
+    /*处理图片方向*/
+    implementation 'androidx.exifinterface:exifinterface:1.0.0'
     /*rx*/
     api "io.reactivex.rxjava2:rxkotlin:$rx_kotlin"
     api "io.reactivex.rxjava2:rxandroid:$rx_android"
@@ -88,9 +86,6 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$ok_http"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
-
-
-    /*kotlin协程*/
 
     /*协程Android库，提供了ui调度*/
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:${kotlinx_coroutines_android}"
@@ -126,6 +121,7 @@ dependencies {
 
     /*内存泄漏检测 leakcanary*/
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${leakcanary_android}"
+
 
 }
 
