--- a/config.gradle
+++ b/config.gradle
@@ -20,7 +20,7 @@ ext {
     constraintlayout = "1.1.3"
     annotation = "1.1.0"
     multiDexVersion = "2.0.1"
-    lifecycle_extensions="2.0.0"
+    lifecycle_extensions = "2.0.0"
     /*third party*/
     eventbus = "3.1.1"
     glide = "4.9.0"
@@ -35,10 +35,10 @@ ext {
     bottom_navigation_bar = "2.1.0"
     gson = "2.8.5"
     material_dialogs = "3.1.0"
-    baseRecyclerViewAdapterHelper = "2.9.49-androidx"
+    baseRecyclerViewAdapterHelper = "2.9.50"
     photoview = "2.3.0"
     objectboxVersion = "2.3.4"
-    utilcode = "1.25.7"
+    utilcode = "1.25.8"
     arouter_api = "1.5.0"
     arouter_compiler = "1.2.2"
     walleVersion = "1.1.6"
