1.完善混淆配置 2.删除热修复相关依赖以及代码

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
             keyAlias rootProject.ext.signConfigs.keyAlias
             keyPassword rootProject.ext.signConfigs.keypwd
             storeFile file(rootProject.ext.signConfigs.storeFilePath)
+            v2SigningEnabled true
         }
     }
 
