新增lib_base模块，将共用部分代码移至该模块，方便后期直接依赖使用

--- a/gao_de_map/src/main/AndroidManifest.xml
+++ b/gao_de_map/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
 
     <application
-        android:name="com.yzq.common.BaseApp"
+        android:name="com.yzq.lib_base.BaseApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         tools:ignore="GoogleAppIndexingWarning">
