--- a/common/build.gradle
+++ b/common/build.gradle
@@ -123,6 +123,7 @@ dependencies {
     /*内存泄漏检测 leakcanary*/
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${leakcanary_android}"
     api project(path: ':lib_base')
+    api project(path: ':lib_net')
 
 }
 
