--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':common', ':custom_view', ':gao_de_map', ':lib_base'
+include ':app', ':common', ':custom_view', ':gao_de_map', ':lib_base', ':lib_net'
