--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -47,38 +47,38 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api "androidx.appcompat:appcompat:$appcompat"
-    api "com.google.android.material:material:$material"
-    api "androidx.vectordrawable:vectordrawable:$vectordrawable"
-    api "androidx.constraintlayout:constraintlayout:$constraintlayout"
-    api "androidx.annotation:annotation:$annotation"
-    api "androidx.multidex:multidex:$multiDexVersion"
+//    api "androidx.appcompat:appcompat:$appcompat"
+//    api "com.google.android.material:material:$material"
+//    api "androidx.vectordrawable:vectordrawable:$vectordrawable"
+//    api "androidx.constraintlayout:constraintlayout:$constraintlayout"
+//    api "androidx.annotation:annotation:$annotation"
+//    api "androidx.multidex:multidex:$multiDexVersion"
 
-    api "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions"
+    compileOnly "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions"
 
     /*rx*/
-    api "io.reactivex.rxjava2:rxkotlin:$rx_kotlin"
-    api "io.reactivex.rxjava2:rxandroid:$rx_android"
+    compileOnly "io.reactivex.rxjava2:rxkotlin:$rx_kotlin"
+    compileOnly "io.reactivex.rxjava2:rxandroid:$rx_android"
 
     /*AutoDispose*/
-    api "com.uber.autodispose:autodispose-ktx:$autodispose_version"
-    api "com.uber.autodispose:autodispose-android-archcomponents-ktx:$autodispose_version"
+    compileOnly "com.uber.autodispose:autodispose-ktx:$autodispose_version"
+    compileOnly "com.uber.autodispose:autodispose-android-archcomponents-ktx:$autodispose_version"
 
     /*eventbus*/
-    implementation "org.greenrobot:eventbus:$eventbus"
+    compileOnly "org.greenrobot:eventbus:$eventbus"
 
 
     /*ARouter*/
-    api "com.alibaba:arouter-api:$arouter_api"
+    compileOnly "com.alibaba:arouter-api:$arouter_api"
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
 
     /*utils*/
-    api "com.blankj:utilcodex:$utilcode"
+    compileOnly "com.blankj:utilcodex:$utilcode"
     /*Gson*/
-    implementation "com.google.code.gson:gson:$gson"
+    compileOnly "com.google.code.gson:gson:$gson"
 
     /*progressmanager*/
-    implementation "me.jessyan:progressmanager:$progressmanager_version"
+    compileOnly "me.jessyan:progressmanager:$progressmanager_version"
 
 }
 
