--- a/lib_materialdialog/build.gradle
+++ b/lib_materialdialog/build.gradle
@@ -28,4 +28,14 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:$appcompat"
+    implementation "com.google.android.material:material:$material"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
+    /*dialog*/
+    api "com.afollestad.material-dialogs:core:$material_dialogs"
+    api "com.afollestad.material-dialogs:input:$material_dialogs"
+    api "com.afollestad.material-dialogs:bottomsheets:$material_dialogs"
+    api "com.afollestad.material-dialogs:lifecycle:$material_dialogs"
+
+    implementation project(path: ':lib_resource')
 }
