--- a/common/build.gradle
+++ b/common/build.gradle
@@ -56,15 +56,6 @@ dependencies {
     api "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions"
     /*处理图片方向*/
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
-    /*rx*/
-    api "io.reactivex.rxjava2:rxkotlin:$rx_kotlin"
-    api "io.reactivex.rxjava2:rxandroid:$rx_android"
-
-    /*AutoDispose*/
-    api "com.uber.autodispose:autodispose-ktx:$autodispose_version"
-    api "com.uber.autodispose:autodispose-android-archcomponents-ktx:$autodispose_version"
-
-
 
     /*permission*/
     api "com.yanzhenjie.permission:x:$permission"
@@ -102,6 +93,7 @@ dependencies {
     api project(path: ':lib_img')
     api project(path: ':lib_eventbus')
     api project(path: ':lib_materialdialog')
+    api project(path: ':lib_rx')
     //api 'com.github.yuzhiqiang1993:kotlincommon:0.0.2vm'
 }
 
