--- a/lib_resource/build.gradle
+++ b/lib_resource/build.gradle
@@ -28,4 +28,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:$appcompat"
+    implementation "com.google.android.material:material:$material"
+    implementation "androidx.vectordrawable:vectordrawable:$vectordrawable"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
+    implementation "androidx.annotation:annotation:$annotation"
+    implementation "androidx.multidex:multidex:$multiDexVersion"
 }
