--- a/lib_widget/build.gradle
+++ b/lib_widget/build.gradle
@@ -46,5 +46,10 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
     implementation "androidx.annotation:annotation:$annotation"
     implementation "androidx.multidex:multidex:$multiDexVersion"
+    /*utils*/
+    implementation "com.blankj:utilcodex:$utilcode"
+    /*Datepicker*/
+    api "com.ycuwq.widgets:datepicker:$datepickerVersion"
 
+    implementation project(path: ":lib_resource")
 }
