--- a/lib_base_ui/build.gradle
+++ b/lib_base_ui/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "com.github.ben-manes.versions"
 
+
 android {
     compileSdkVersion compile_sdk_version
     defaultConfig {
@@ -38,18 +39,18 @@ android {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$appcompat"
     implementation "com.google.android.material:material:$material"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
-    /*dialog*/
-    api "com.afollestad.material-dialogs:core:$material_dialogs"
-    api "com.afollestad.material-dialogs:input:$material_dialogs"
-    api "com.afollestad.material-dialogs:bottomsheets:$material_dialogs"
-    api "com.afollestad.material-dialogs:lifecycle:$material_dialogs"
 
-    implementation project(path: ':lib_resource')
-    implementation project(path: ':lib_widget')
-    implementation project(path: ':lib_rx')
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions"
+
+
+    /*utils*/
+    implementation "com.blankj:utilcodex:$utilcode"
+
+    implementation project(path: ':lib_eventbus')
+
 }
+
