--- a/lib_img/build.gradle
+++ b/lib_img/build.gradle
@@ -40,7 +40,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    implementation "androidx.appcompat:appcompat:$appcompat"
 
     /*glide*/
     api "com.github.bumptech.glide:glide:$glide"
@@ -49,7 +49,15 @@ dependencies {
     /*photoView*/
     api "com.github.chrisbanes:PhotoView:$photoview"
 
+    /*RxImagepicker*/
+    api "com.github.qingmei2:rximagepicker:$rx_imgpicker"
+
+    /*utils*/
+    implementation "com.blankj:utilcodex:$utilcode"
+
     implementation project(path: ':lib_resource')
+    implementation project(path: ':lib_rx')
+    implementation project(path: ':lib_permission')
 
 }
 
