--- a/lib_widget/build.gradle
+++ b/lib_widget/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "com.github.ben-manes.versions"
-
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.yuzhiqiang1993'
 android {
     compileSdkVersion compile_sdk_version
     defaultConfig {
@@ -53,3 +54,4 @@ dependencies {
 
     implementation project(path: ":lib_resource")
 }
+
