--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -10,22 +10,6 @@
     <application
         android:allowBackup="false"
         android:largeHeap="true"
-        android:theme="@style/AppTheme">
-
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.provider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_provider_path" />
-        </provider>
-
-        <activity
-            android:name="com.yzq.lib_base.ui.ImgPreviewActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:screenOrientation="portrait" />
-    </application>
+        android:theme="@style/AppTheme" />
 
 </manifest>
