--- a/lib_img/src/main/AndroidManifest.xml
+++ b/lib_img/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yzq.lib_img" />
+<manifest package="com.yzq.lib_img" >
+
+
+</manifest>
