--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.50'
+
 
     apply from: file("config.gradle")
     repositories {
@@ -22,6 +24,7 @@ buildscript {
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1' // Add this line
     }
+
 
 
 }
