--- a/common/build.gradle
+++ b/common/build.gradle
@@ -75,6 +75,9 @@ dependencies {
 
     /*utils*/
     api "com.blankj:utilcodex:$utilcode"
+    /*Gson*/
+    api "com.google.code.gson:gson:$gson"
+
 
     /*内存泄漏检测 leakcanary*/
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${leakcanary_android}"
@@ -82,14 +85,6 @@ dependencies {
 
     api project(path: ':lib_base')
     api project(path: ':lib_net')
-//    api project(path: ':lib_img')
-//    api project(path: ':lib_eventbus')
-//    api project(path: ':lib_materialdialog')
-//    api project(path: ':lib_rx')
-//    api project(path: ':lib_resource')
-//    api project(path: ':lib_widget')
-//    api project(path: ':lib_constants')
-//    api project(path: ':lib_permission')
-    //api 'com.github.yuzhiqiang1993:kotlincommon:0.0.2vm'
+
 }
 
