lib_base_adapter新增maven配置

--- a/lib_base_adapter/build.gradle
+++ b/lib_base_adapter/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "com.github.ben-manes.versions"
-
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.yuzhiqiang1993'
 
 android {
     compileSdkVersion compile_sdk_version
@@ -43,10 +44,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 
-
     /*baseRecyclerViewAdapterHelper*/
     api "com.github.CymChad:BaseRecyclerViewAdapterHelper:$baseRecyclerViewAdapterHelper"
-
 
 
     /*utils*/
