1.新增lib_coroutine 2.优化BaseViewModel初始化代码，自动移除订阅

--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
 
 
+
+
     api project(path: ':lib_base_adapter')
     api project(path: ':lib_constants')
     api project(path: ':lib_eventbus')
@@ -79,6 +81,7 @@ dependencies {
     api project(path: ':lib_resource')
     api project(path: ':lib_rx')
     api project(path: ':lib_widget')
+    api project(path: ':lib_coroutine')
 
 
 }
