--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ kapt {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
     implementation "com.github.yuzhiqiang1993:zxing:${zxing_version}"
     implementation "org.jsoup:jsoup:${jsoup_version}"
@@ -73,11 +75,9 @@ dependencies {
 
     implementation project(':common')
 
-
     if (isModule.toBoolean()) {
         implementation project(':gao_de_map')
     }
-
 
 
 }
