--- a/config.gradle
+++ b/config.gradle
@@ -19,7 +19,10 @@ ext {
     constraintlayout = "1.1.3"
     annotation = "1.1.0"
     multiDexVersion = "2.0.1"
-    lifecycle_extensions = "2.0.0"
+    lifecycle_extensions = "2.1.0"
+    kotlinx_coroutines = "1.3.1"
+
+
     /*third party*/
     eventbus = "3.1.1"
     glide = "4.9.0"
@@ -49,7 +52,6 @@ ext {
     gradle_versions_plugin = "0.21.0"
     zxing_version = "2.2.8"
     jsoup_version = "1.12.1"
-    kotlinx_coroutines_android = "1.3.0"
     leakcanary_android = "2.0-beta-2"
 
 
