--- a/config.gradle
+++ b/config.gradle
@@ -19,7 +19,7 @@ ext {
     constraintlayout = "1.1.3"
     annotation = "1.1.0"
     multiDexVersion = "2.0.1"
-    lifecycle_extensions = "2.1.0"
+    lifecycle_extensions = "2.2.0-alpha04"
     kotlinx_coroutines = "1.3.1"
 
 
