--- a/lib_coroutine/build.gradle
+++ b/lib_coroutine/build.gradle
@@ -46,8 +46,8 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines"
 
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_extensions"
-    api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_extensions"
-    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_extensions"
+//    api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_extensions"
+//    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_extensions"
 
 }
 
