--- a/config.gradle
+++ b/config.gradle
@@ -14,18 +14,18 @@ ext {
 
     /*AndroidX*/
     appcompat = "1.1.0"
-    material = "1.0.0"
+    material = "1.1.0-alpha10"
     vectordrawable = "1.1.0"
-    constraintlayout = "1.1.3"
+    constraintlayout = "2.0.0-beta2"
     annotation = "1.1.0"
     multiDexVersion = "2.0.1"
-    lifecycle_extensions = "2.2.0-alpha04"
+    lifecycle_extensions = "2.2.0-alpha05"
     kotlinx_coroutines = "1.3.1"
-
+    swiperefreshlayout="1.0.0"
 
     /*third party*/
     eventbus = "3.1.1"
-    glide = "4.9.0"
+    glide = "4.10.0"
     permission = "2.0.1"
     retrofit = "2.6.1"
     progressmanager_version = "1.5.0"
@@ -52,7 +52,7 @@ ext {
     gradle_versions_plugin = "0.21.0"
     zxing_version = "2.2.8"
     jsoup_version = "1.12.1"
-    leakcanary_android = "2.0-beta-2"
+    leakcanary_android = "2.0-beta-3"
 
 
     signConfigs = [
