--- a/config.gradle
+++ b/config.gradle
@@ -1,6 +1,4 @@
 ext {
-    kotlin_version = '1.3.50'
-    gradle_version = '3.4.1'
 
     /*defaultConfig*/
     compile_sdk_version = 29 //Android 9(P)
@@ -14,7 +12,7 @@ ext {
 
     /*AndroidX*/
     appcompat = "1.1.0"
-    material = "1.1.0-alpha10"
+    material = "1.0.0"
     vectordrawable = "1.1.0"
     constraintlayout = "2.0.0-beta2"
     annotation = "1.1.0"
