--- a/config.gradle
+++ b/config.gradle
@@ -14,10 +14,10 @@ ext {
     appcompat = "1.1.0"
     material = "1.0.0"
     vectordrawable = "1.1.0"
-    constraintlayout = "2.0.0-beta2"
+    constraintlayout = "1.1.3"
     annotation = "1.1.0"
     multiDexVersion = "2.0.1"
-    lifecycle_extensions = "2.2.0-alpha05"
+    lifecycle_extensions = "2.1.0"
     kotlinx_coroutines = "1.3.1"
     swiperefreshlayout="1.0.0"
 
