--- a/config.gradle
+++ b/config.gradle
@@ -20,6 +20,7 @@ ext {
     lifecycle_extensions = "2.1.0"
     kotlinx_coroutines = "1.3.1"
     swiperefreshlayout="1.0.0"
+    room_version="2.1.0"
 
     /*third party*/
     eventbus = "3.1.1"
