--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
-        <activity android:name=".ui.activity.CoroutinesActivity">
-
-        </activity>
+        <activity android:name=".ui.activity.RoomActivity"></activity>
+        <activity android:name=".ui.activity.CoroutinesActivity"></activity>
         <activity
             android:name=".ui.activity.FragmentActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
@@ -58,14 +57,11 @@
             android:name=".ui.activity.LoginActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
         <activity
             android:name=".ui.activity.AutodisposeActivity"
