1.RoomActivity中删除更改为侧滑删除，完善ui 2.查询时根据id进行倒序排序

--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -55,7 +55,15 @@ dependencies {
     implementation "androidx.annotation:annotation:$annotation"
     implementation "androidx.multidex:multidex:$multiDexVersion"
 
-    api "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions"
+
+    // ViewModel and LiveData
+    api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+//    // alternatively - just ViewModel
+//    api "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version" // For Kotlin use lifecycle-viewmodel-ktx
+//    // alternatively - just LiveData
+//    api "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+
+
     api "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefreshlayout"
 
     /*utils*/
