--- a/config.gradle
+++ b/config.gradle
@@ -17,7 +17,7 @@ ext {
     constraintlayout = "1.1.3"
     annotation = "1.1.0"
     multiDexVersion = "2.0.1"
-    lifecycle_extensions = "2.1.0"
+    lifecycle_version= "2.1.0"
     kotlinx_coroutines = "1.3.2"
     swiperefreshlayout = "1.0.0"
     room_version = "2.1.0"
@@ -43,7 +43,7 @@ ext {
     walleVersion = "1.1.6"
     andResGuardVersion = "1.2.17"
     rx_imgpicker = "2.5.0"
-    bugly_crashreport_upgrade = '1.4.1'
+    bugly_crashreport_upgrade = '1.4.2'
     bugly_nativecrashreport = '3.7.1'
     datepickerVersion = "1.2.3"
     flexbox = "1.1.1"
