--- a/lib_coroutine/build.gradle
+++ b/lib_coroutine/build.gradle
@@ -45,9 +45,9 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines"
 
-    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_extensions"
-//    api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_extensions"
-//    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_extensions"
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+//    api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+//    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
 }
 
